Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

25-Dec-2010 Mark Dexter
 # [#23886] Escape Module Class Suffix for all Modules (Rouven Weßling)

24-Dec-2010 Christophe Demko
 # [#23857] thrice Recipient!!
 # [#23956] Beez20 string name issues (bill richardson, Edgars Piruška)
 # [#23923] PHP Strict validation in session classes (Rune Sjøen)
 # [#23789] Typo in sample data (Ramindu Deshapriya)
 # [#23784] Template editor background missing with bluestork (bill richardson,	Ramindu Deshapriya)
 # [#23830] ACL is warned but bypassed for change state, archive and trash (bill richardson, Mark Dexter)

24-Dec-2010 Jean-Marie Simonet
 # [#23868] FTP not implemented for template source edit
 +$ [#23926] Missing help screen reference
 # [#23949] Issue with multilanguage and editing articles in frontend. Thanks Christophe.
 $ [#23960] Typo in Article Options. Thanks Bill
 ^$ [#23936] Random image module description and alternate layout strings are not translated in other languages. Refactoring all keys.

23-Dec-2010 Jean-Marie Simonet
 # [#23945] Remove hardcoded color. Thanks Andrea
 # [#23925] Update obsolete CSS cursor notation. Thanks Andrea
 $ [#23931] Untranslated String in en-GB.com_banners.ini. Thanks Bill
 $ [#23930] Untranslated String in en-GB.com_categories.ini. Thanks Bill
 $ [#23928] Bad translation in Weblink Component. Thanks Bill.
 
21-Dec-2010 Christophe Demko
 # [#23894] Components menu item visible in disabled menu (Sander Potjer)
 # [#23782] [PATCH] Fix router calls for components containing hyphens and full stops. (Tom Lee)
 # [#23811] PHP Strict Compatibility (Elin Waring, Rune Sjøen)
 ^ [#23877] Improve how HTML entities in meta data are handled (Rouven Weßling)
 ^ [#23879] Remove a workaround around a PHP4 limitation (Rouven Weßling)