@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 25-Dec-2010 Mark Dexter
  # [#23886] Escape Module Class Suffix for all Modules (Rouven Weßling)
+ # [#23773] Category not found notice
 
 24-Dec-2010 Christophe Demko
  # [#23857] thrice Recipient!!
